--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,11 @@
   }
 }
 
-body {
-  margin: 0 auto;
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: auto !important;
-  max-width: 90rem;
+  /* overflow: hidden; */
 }
 
 @layer utilities {
